# otus-cpp-2023-06-hw08

./: CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  dir_000006_000005.html  dir_000007_000005.html  dir_3b7a5a5133c1b67ccc147597ad7d4687.html  dir_3b7a5a5133c1b67ccc147597ad7d4687_dep.map  dir_3b7a5a5133c1b67ccc147597ad7d4687_dep.md5  dir_5c8149c1ab3ada55f985384539a2b0c4.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1_dep.map  dir_6719ab1f1f7655efc2fa43f7eb574fd1_dep.md5  dir_afb66442a68777caae4185e53339caf2.html  dir_b5aad1be1f1813ffd57bae3c88dc317a.html  dir_b5aad1be1f1813ffd57bae3c88dc317a_dep.map  dir_b5aad1be1f1813ffd57bae3c88dc317a_dep.md5  dir_b7153b73bfea795e976b57c150534b7e.html  dir_b7153b73bfea795e976b57c150534b7e_dep.map  dir_b7153b73bfea795e976b57c150534b7e_dep.md5  dir_b867c8820f53660781db6d39c620257d.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  libs_2mylib_2tests_2main_8cpp.html  libs_2mylib_2tests_2main_8cpp__incl.map  libs_2mylib_2tests_2main_8cpp__incl.md5  main.cpp  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  menudata.js  mylib_8cpp.html  mylib_8cpp__incl.map  mylib_8cpp__incl.md5  mylib_8hpp.html  mylib_8hpp__dep__incl.map  (+8 more)
.github/workflows/: cmake-multi-platform-build.yml  deploy-gh-pages.yml  release.yml
docs/: doxygen.conf.in
libs/: CMakeLists.txt
libs/bayanlib/: CMakeLists.txt
libs/bayanlib/include/: bayanscanner.hpp  filepartitionhashcalculator.hpp  scanoptions.hpp
libs/bayanlib/src/: bayanscanner.cpp  filepartitionhashcalculator.cpp
libs/mylib/: CMakeLists.txt
libs/mylib/src/: mylib.cpp
libs/mylib/tests/: CMakeLists.txt  main.cpp
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  searchdata.js  variables_0.js
